--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "start": "tsc && ts-node --project tsconfig.json src/index.ts",
+    "start:fail:why": "tsc && ts-node --project tsconfig.json src/index.ts -p public/failingList.txt -w",
+    "start:fail:verbose": "tsc && ts-node --project tsconfig.json src/index.ts -p public/failingList.txt -v",
+    "start:pass:why": "tsc && ts-node --project tsconfig.json src/index.ts -p public/passingList.txt -w",
+    "start:pass:verbose": "tsc && ts-node --project tsconfig.json src/index.ts -p public/passingList.txt -v",
     "test": "yarn jest",
     "format": "yarn eslint . --fix"
   },
